fixed scroll for down btn and spacing of quotes

--- a/public/less/agency.less
+++ b/public/less/agency.less
@@ -263,6 +263,7 @@ section {
         font-size: 20px;
         // .serif-font;
         font-family: @shadow;
+        letter-spacing: 2px;
         text-transform: none;
         font-style: italic;
         font-weight: 400;
